packages/svelte/tests/validator/samples/illegal_spread_element-document/input.svelte
<script>
	let a = {};
</script>
<svelte:document {...a}></svelte:document>
