packages/svelte/tests/compiler-errors/samples/css-global-block-modifier/main.svelte
<style>
	.x .y:global {}
</style>
